Bug 170866 - [26.8 Basic-IDE] When trying to open module of library containing dialogs, Basic-IDE crashes (kf5,qt5,qt6)
Summary: [26.8 Basic-IDE] When trying to open module of library containing dialogs, Ba...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: BASIC-IDE Qt6
  Show dependency treegraph
 
Reported: 2026-02-18 10:51 UTC by nobu
Modified: 2026-03-10 07:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2026-02-18 10:51:16 UTC
Description:
When trying to open module of library containing dialogs, Basic-IDE crashes.

Steps to Reproduce:
1. Open StartCenter.
2. Open Basic-IDE.
3. Click  "Application Macros & Dialogs / Access2Base / _License"

Actual Results:
4. Crash.

Expected Results:
4. You can view Basic macros.


Reproducible: Always


User Profile Reset: No

Additional Info:

Currently only confirmed to work with "Linux-kf5".

Could not verify compatibility with "Windows 11" and "Linux-gtk3".

Reproducible
[2026-02-18]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 55507043004d55816cdc238733a9f5c7a2240f2d
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

---
Not reproducible
Version: 25.2.7.2 (X86_64) / LibreOffice Community
Build ID: 5cbfd1ab6520636bb5f7b99185aa69bd7456825d
CPU threads: 2; OS: Linux 6.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

Not reproducible
Version: 26.2.0.3 (X86_64)
Build ID: afbbd0df0edb6d40b450b0337ac646b0913a760c
CPU threads: 2; OS: Linux 6.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

Not reproducible
[2026-01-28]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 5a5af7828cbad8607fbb29e26b5131fd852d9384
CPU threads: 2; OS: Linux 6.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded
Comment 1 Xisco Faulí 2026-02-18 11:24:41 UTC
I can't reproduce it in

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: b4f8a7da851147740a00c6ebd789b097c739a64e
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2026-02-18 11:25:51 UTC
no reproducible with GEN either... KF5 only issue
Comment 3 Michael Weghorn 2026-02-19 08:35:48 UTC
Can't reproduce on Debian testing. Could you please attach a backtrace (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU/Linux:_How_to_get_a_backtrace )?

What Linux distro (and version) are you using? And does it also happen with a fresh profile?

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 8dd7dede5a54e36edb26c28391a1bd6f8265179f
CPU threads: 32; OS: Linux 6.18; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_GB.UTF-8); UI: en-US
Calc: threaded

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 8dd7dede5a54e36edb26c28391a1bd6f8265179f
CPU threads: 32; OS: Linux 6.18; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 4 nobu 2026-03-07 11:00:08 UTC
3. Double-Click  "Application Macros & Dialogs / Access2Base / _License"
Comment 5 raal 2026-03-08 07:36:26 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-26.8$.
Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
Thanks
 55541bc170c596fcf6a9b4ef114ca03fcd5e1b0b is the first bad commit
commit 55541bc170c596fcf6a9b4ef114ca03fcd5e1b0b
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Feb 4 00:10:00 2026 +0100

    source 013304cdcfd96a0bcd7ebee3c478324e7d6a561c

198607: tdf#130857 qt weld: Add initial support for interim builder | https://gerrit.libreoffice.org/c/core/+/198607
Comment 6 raal 2026-03-08 07:39:37 UTC
(In reply to Michael Weghorn from comment #3)

> What Linux distro (and version) are you using? And does it also happen with
> a fresh profile?
> 

Ubuntu 22.04.5. It happens with fresh profile too.
Comment 7 Michael Weghorn 2026-03-09 14:02:33 UTC
(In reply to raal from comment #5)
> This seems to have begun at the below commit in bibisect repository/OS
> linux-64-26.8$.
> Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
> Thanks
>  55541bc170c596fcf6a9b4ef114ca03fcd5e1b0b is the first bad commit
> commit 55541bc170c596fcf6a9b4ef114ca03fcd5e1b0b
> Author: Jenkins Build User <tdf@maggie.tdf>
> Date:   Wed Feb 4 00:10:00 2026 +0100
> 
>     source 013304cdcfd96a0bcd7ebee3c478324e7d6a561c
> 
> 198607: tdf#130857 qt weld: Add initial support for interim builder |
> https://gerrit.libreoffice.org/c/core/+/198607

Thanks for the bibisect.

I couldn't reproduce earlier because I have environment variable SAL_VCL_QT_USE_WELDED_WIDGETS=1 set in my environment to enable the WIP use of native Qt widgets, but can reproduce when unsetting this.

Pending fix: https://gerrit.libreoffice.org/c/core/+/201281
Comment 8 Commit Notification 2026-03-10 06:59:52 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cc7f0b7c8f3a810686c5407f326a7f1d6660ad23

tdf#170866 qt: Extract new QtInstance::isQtWeldingEnabled

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-03-10 06:59:55 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/144e9b4cfcf82abae70d1072620d4d06bd41ffc5

tdf#170866 qt: Don't use interim Qt builder unless enabled

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.