tdf#170866 qt: Extract new QtInstance::isQtWeldingEnabled

Extract the existing logic to determine whether to use Qt welding,
i.e. use native Qt widgets for dialogs created from .ui
files (if they are in the list of supported files in addition).

This will be reused from QtInstance::CreateInterimBuilder
in an upcoming commit.

Change-Id: I1fd5a590cc58b09062ee4cd5c5958bb6124d9131
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201280
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>